# BILLinois

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  Dockerfile  LICENSE.md  PRIVACY.md  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: format.yml  mkdocs.yml  pytest.yaml  ruff-lint.yml
01-architecture/: index.html
02-django-setup/: index.html
03-schema-updates/: index.html
04-signing_up_and_logging_in/: index.html
05-models/: index.html
_logs/: log.json
apps/accounts/: adapters.py  admin.py  forms.py  models.py  urls.py  views.py
apps/core/: models.py  states.py  tests.py  urls.py  utils.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
data/: data_reading.py  data_utils.py  updates.py
data/samples/: samples.md  samples_helpers.py
data/topics/: keywords.py  topics_classifier.py
docs/: 01-architecture.md  02-django-setup.md  03-schema-updates.md  04-signing_up_and_logging_in.md  05-django-views.md  05-models.md  06-deploying.md  06-models.md  architecture.md  django-setup.md  django-views.md  frontend1  frontend2  index.md  launching-django.md  models.md  schema-updates.md  signing_up_and_logging_in.md
project/: JoaquinTestCommit.py  livia-test.txt
search/: search_index.json
static/: index.html  search.html
templates/: base.html  bill.html  bill_page.html  favorites.html  home.html  privacy_policy.html  search.html
test/: suchi_test  test.py
tests/: README.md  test.py  test_e2e.py  test_models.py  test_search.py  test_views.py
(+106 files in other folders)
